update module name and docs

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/go,linux,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,linux,macos
 
 ### Go ###
+# If you prefer the allow list template instead of the deny list, see community template:
+# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -19,9 +21,8 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-### Go Patch ###
-/vendor/
-/Godeps/
+# Go workspace file
+go.work
 
 ### Linux ###
 *~
@@ -66,5 +67,9 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
 
 # End of https://www.toptal.com/developers/gitignore/api/go,linux,macos
