--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.21'
-    - name: Install xmllint
+    - name: Install libvips-dev
       run: sudo apt-get install -y libvips-dev
     - name: Build
       run: go build -v ./...
